# spec-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  spec-driven.md  当前commit-id.txt
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md
memory/: constitution.md
scripts/bash/: common.sh
src/specify_cli/: __init__.py
templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
